--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <div class="home-btn d-flex gap-4">
 
-       <a href="./Aswath_cv.pdf" download="Resume">  <button class="bt1"> <i class="fa-solid fa-download"></i> Download Resume </button></a>
+       <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="bt1"> <i class="fa-solid fa-download"></i> Download Resume </button></a>
         <button class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button>
        <!-- <button type="button" class="btn btn-primary btn-lg d-flex"> <i class="fa-solid fa-download"></i> Download Resume </button>
 <button type="button" class="btn btn-secondary btn-lg">Large button</button> -->
@@ -240,7 +240,7 @@
 
         <p> <span>My objective:</span> To grow as a designer by working on challenging projects, improving my skills in user experience and visual design, and contributing meaningful solutions to the company I work with. </p>
 
-         <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download cv </button>
+        <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a>
 
          <button class="about-btn2 about-btn1"> Hire Me </button>
 
