--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <div class="About">
 
-  <h1 class="About-h1"> About Me </h1>
+  <h1 class="About-h1"> Ab<span>out</span> Me</h1>
 
 
   
@@ -242,7 +242,9 @@
 
         <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a>
 
-         <button class="about-btn2 about-btn1"> Hire Me </button>
+        <a>  <button class="about-btn2 about-btn1">  <i class="fas fa-paper-plane"></i>  Let's Talk </button> </a>
+
+         
 
         <div class="point point1">
 
@@ -286,7 +288,7 @@
         <div class="skill-container">
             <div class="section-header" data-aos="fade-up">
                 <span class="section-subtitle">What I Can Do</span>
-                <h2 class="section-title">Skills & Technologies</h2>
+                <h2 class="section-title">Skills & T<span>ech</span>nologies</h2>
                 <div class="section-divider"></div>
                
             </div>
