--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <div class="index">
+    <div class="index" id="home">
 
 
         <!-- ----------- Nav bar ------------ -->
@@ -29,15 +29,15 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="#home">Home</a>
         </li>
         
         <li class="nav-item">
-          <a class="nav-link text-light nav_a" href="#"> About </a>
+          <a class="nav-link text-light nav_a" href="#about"> About </a>
         </li>
 
          <li class="nav-item">
-          <a class="nav-link text-light nav_a" href="#"> Skills </a>
+          <a class="nav-link text-light nav_a" href="#skills"> Skills </a>
         </li>
 
          <li class="nav-item">
@@ -148,7 +148,7 @@
 
 <!-- ----- About----- -->
 
-<div class="About">
+<div class="About" id="about">
 
   <h1 class="About-h1"> Ab<span>out</span> Me</h1>
 
@@ -276,7 +276,7 @@
 <!-- ------ Skills -------- -->
 
 
-<div class="skill">
+<div class="skill" id="skills">
 
 
 
