--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 
         <p> <span>My objective:</span> To grow as a designer by working on challenging projects, improving my skills in user experience and visual design, and contributing meaningful solutions to the company I work with. </p>
 
-        <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a>
+        <!-- <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a> -->
 
-        <a>  <button class="about-btn2 about-btn1">  <i class="fas fa-paper-plane"></i>  Let's Talk </button> </a>
+        <a href="contact">  <button class="about-btn2 about-btn1"> <i class="fas fa-paper-plane"></i> Get In Touch </button> </a>
 
-         
+      
 
         <div class="point point1">
 
@@ -414,7 +414,7 @@
                             <div class="skill-icon">
                                 <i class="fa-solid fa-leaf mongo-i"></i>
                             </div>
-                            <h4> Mongo DB</h4>
+                            <h4> MongoDB</h4>
                             <div class="skill-bar">
                                 <div class="skill-progress" data-progress="78"></div>
                             </div>
