--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
                 <h4> Full-Stact Web Development </h4>
 
-                <p> Code99 IT Academy, Chennai</p>
+                <p class="course-p"> Code99 IT Academy, Chennai</p>
 
             </div>
 
@@ -622,7 +622,7 @@
 
                  <h4> Full-Stack Java </h4>
 
-                 <p> Jspiders, Bengaluru </p>
+                 <p class="course-p"> Jspiders, Bengaluru </p>
             </div>
              
         </div>
