--- a/index.html
+++ b/index.html
@@ -648,6 +648,34 @@
 
 
 
+<!-- PROJECT CONTAINER  -->
+
+<div class="project-container">
+
+    <span class="section-subtitle"> My Work </span>
+
+    <h1 class="project-title"> Featur<span>ed p</span>rojects </h1>
+
+    <div class="project-content">
+
+        <div class="project-box project-box1 " data-aos="fade-up" data-aos-delay="500">
+
+        </div>
+
+        <div class="project-box project-box2">
+
+        </div>
+
+        <div class="project-box project-box3">
+
+        </div>
+
+
+
+    </div>
+
+</div>
+
 
 
 
@@ -665,3 +693,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+<!-- Hover None tag :;::::::
+
+pointer-events: none;  -->
