--- a/index.html
+++ b/index.html
@@ -695,11 +695,11 @@
 A portfolio website is a digital platform that showcases your best work, skills, and professional identity. It serves as an online business card, allowing you to attract potential clients, partners, and job opportunities. </p>
 
                  <div class="project-tech">
-                            <span class="tech-badge">React</span>
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">MongoDB</span>
-                            <span class="tech-badge">Express</span>
-                            <span class="tech-badge">Stripe API</span>
+                            <span class="tech-badge"> Html5 </span>
+                            <span class="tech-badge"> Css </span>
+                            <span class="tech-badge"> JavaScript </span>
+                            <span class="tech-badge"> Bootstrap5 </span>
+                            <!-- <span class="tech-badge">Stripe API</span> -->
                         </div>
 
                         <div class="project-live-demo">
@@ -736,7 +736,7 @@ A portfolio website is a digital platform that showcases your best work, skills,
 
              <div class="project-text-box">
 
-                <h2> Portfolio </h2>
+                <h2> Disney + hotstar </h2>
 
                 <p> 
 
@@ -784,7 +784,7 @@ A portfolio website is a digital platform that showcases your best work, skills,
               
              <div class="project-text-box">
 
-                <h2> Portfolio </h2>
+                <h2> Car Info </h2>
 
                 <p> 
 
@@ -792,11 +792,12 @@ A portfolio website is a digital platform that showcases your best work, skills,
 A portfolio website is a digital platform that showcases your best work, skills, and professional identity. It serves as an online business card, allowing you to attract potential clients, partners, and job opportunities. </p>
 
                  <div class="project-tech">
-                            <span class="tech-badge">React</span>
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">MongoDB</span>
-                            <span class="tech-badge">Express</span>
-                            <span class="tech-badge">Stripe API</span>
+                            <span class="tech-badge"> Html5 </span>
+                            <span class="tech-badge"> Css </span>
+                            <span class="tech-badge"> JavaScript </span>
+                             <span class="tech-badge"> Bootstrap5 </span>
+                            <!-- <span class="tech-badge">Express</span>
+                            <span class="tech-badge">Stripe API</span> -->
                         </div>
 
                         <div class="project-live-demo">
