--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="home-btn d-flex gap-4">
 
        <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="bt1"> <i class="fa-solid fa-download"></i> Download Resume </button></a>
-        <button class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button>
+       <a href="#project">  <button class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button> </a>
        <!-- <button type="button" class="btn btn-primary btn-lg d-flex"> <i class="fa-solid fa-download"></i> Download Resume </button>
 <button type="button" class="btn btn-secondary btn-lg">Large button</button> -->
 
@@ -665,7 +665,7 @@
 
             <div class="project-img-box">
 
-                <img src="./portfolio-image.jpg"/>
+                <img src="./portfolio-img-2.png"/>
 
                 <div class="project-links">
 
@@ -692,11 +692,11 @@
                 <p> 
 
 
-A portfolio website is a digital platform that showcases your best work, skills, and professional identity. It serves as an online business card, allowing you to attract potential clients, partners, and job opportunities. </p>
+Created a modern and user-friendly portfolio website to present my work, skills, and career journey in a professional format. Demonstrating my expertise in front-end development and responsive design. </p>
 
                  <div class="project-tech">
                             <span class="tech-badge"> Html5 </span>
-                            <span class="tech-badge"> Css </span>
+                            <span class="tech-badge"> CSS </span>
                             <span class="tech-badge"> JavaScript </span>
                             <span class="tech-badge"> Bootstrap5 </span>
                             <!-- <span class="tech-badge">Stripe API</span> -->
@@ -704,7 +704,7 @@ A portfolio website is a digital platform that showcases your best work, skills,
 
                         <div class="project-live-demo">
 
-                            <a href="" class="live"> <i class="fas fa-external-link-alt"></i> Live Demo </a>
+                            <a href="https://aswath-77.github.io/Portfolio/" class="live"> <i class="fas fa-external-link-alt"></i> Live Demo </a>
 
                           <a href="https://github.com/Aswath-77"> <i class="fab fa-github"></i> Source </a>
 
@@ -721,7 +721,7 @@ A portfolio website is a digital platform that showcases your best work, skills,
         <div class="project-box project-box2">
              <div class="project-img-box">
 
-                <img src="./disney+hotstar.jpg"/>
+                <img src="./disney-img-2.webp"/>
 
                 <div class="project-links">
 
@@ -736,19 +736,19 @@ A portfolio website is a digital platform that showcases your best work, skills,
 
              <div class="project-text-box">
 
-                <h2> Disney + hotstar </h2>
+                <h2> Disney + hotstar clone </h2>
 
                 <p> 
 
 
-A portfolio website is a digital platform that showcases your best work, skills, and professional identity. It serves as an online business card, allowing you to attract potential clients, partners, and job opportunities. </p>
+Designed and deployed a Disney clone website that replicates the look and feel of Disney+, showcasing my skills in responsive web development and highlighting my responsive layouts, and modern web technologies. </p>
 
                  <div class="project-tech">
-                            <span class="tech-badge">React</span>
-                            <span class="tech-badge">Node.js</span>
-                            <span class="tech-badge">MongoDB</span>
-                            <span class="tech-badge">Express</span>
-                            <span class="tech-badge">Stripe API</span>
+                            <span class="tech-badge"> Html5 </span>
+                            <span class="tech-badge"> CSS </span>
+                            <span class="tech-badge"> JavaScript </span>
+                            <span class="tech-badge"> Bootstrap5 </span>
+                            <!-- <span class="tech-badge">Stripe API</span> -->
                         </div>
 
                         <div class="project-live-demo">
@@ -770,7 +770,7 @@ A portfolio website is a digital platform that showcases your best work, skills,
         <div class="project-box project-box3">
              <div class="project-img-box">
 
-                <img src="./disney+hotstar.jpg"/>
+                <img src="./car-info.jpg"/>
 
                 <div class="project-links">
 
@@ -789,11 +789,11 @@ A portfolio website is a digital platform that showcases your best work, skills,
                 <p> 
 
 
-A portfolio website is a digital platform that showcases your best work, skills, and professional identity. It serves as an online business card, allowing you to attract potential clients, partners, and job opportunities. </p>
+Built a responsive car info web application that allows users to explore vehicle details, pricing, and performance data through an intuitive interface, designed and deployed a car information platform </p>
 
                  <div class="project-tech">
                             <span class="tech-badge"> Html5 </span>
-                            <span class="tech-badge"> Css </span>
+                            <span class="tech-badge"> CSS </span>
                             <span class="tech-badge"> JavaScript </span>
                              <span class="tech-badge"> Bootstrap5 </span>
                             <!-- <span class="tech-badge">Express</span>
@@ -815,6 +815,22 @@ A portfolio website is a digital platform that showcases your best work, skills,
 
 
     </div>
+
+</div>
+
+
+
+
+
+
+<!-- ================ Contact page =============== -->
+
+
+<div class="contact">
+
+     <span class="section-subtitle"> Get In Touch </span>
+
+    <h1 class="contact-title"> Con<span>tac</span>t Me </h1>
 
 </div>
 
