--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
 
     <div class="home-btn d-flex gap-4">
 
-       <!-- <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="bt1"> <i class="fa-solid fa-download"></i> Download Resume </button></a> -->
+       <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="bt1"> <i class="fa-solid fa-download"></i> Download Resume </button></a>
+            <a href="#project">  <button class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button> </a>
 
 
-        <button onclick="download_resume()" class="bt1" download="Aswath_Resume">  <i class="fa-solid fa-download"></i> Download Resume </button>
-        <button onclick="projects_bt()" class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button>
+        <!-- <button onclick="download_resume()" class="bt1" download="Aswath_Resume">  <i class="fa-solid fa-download"></i> Download Resume </button> -->
+        <!-- <button onclick="projects_bt()" class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button> -->
 
-       <!-- <a href="#project">  <button class="bt2"> View Projects <i class="fa-solid fa-right-from-bracket"></i> </button> </a> -->
+  
        <!-- <button type="button" class="btn btn-primary btn-lg d-flex"> <i class="fa-solid fa-download"></i> Download Resume </button>
 <button type="button" class="btn btn-secondary btn-lg">Large button</button> -->
 
