--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 
         <p> <span>My objective:</span> To grow as a designer by working on challenging projects, improving my skills in user experience and visual design, and contributing meaningful solutions to the company I work with. </p>
 
-        <!-- <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a> -->
+        <a href="./Aswath_resume.pdf" download="Aswath_Resume">  <button class="about-btn1"> <i class="fa-solid fa-download"></i> Download Resume </button> </a>
 
-          <button onclick="contact_bt()" class="about-btn2 about-btn1"> <i class="fas fa-paper-plane"></i> Get In Touch </button> 
+          <!-- <button onclick="contact_bt()" class="about-btn2 about-btn1"> <i class="fas fa-paper-plane"></i> Get In Touch </button>  -->
 
       
 
