--- a/index.html
+++ b/index.html
@@ -430,12 +430,14 @@
                             <span class="skill-percent">87%</span>
                         </div>
 
+                        
+
                         <div class="skill-card">
                             <div class="skill-icon">
                                 <i class="fa-solid fa-leaf mongo-i"></i>
                             </div>
-                            <h4> MongoDB</h4>
-                            <div class="skill-bar">
+                            <h4> MongoDB       <!--  <span class="skill-percent">78%</span> -->  </h4> 
+                                <div class="skill-bar">
                                 <div class="skill-progress" data-progress="78"></div>
                             </div>
                             <span class="skill-percent">78%</span>
